<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_home_front"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@mipmap/carretera"
    tools:context="findyourpet.vistas.Home">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/barra_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/barra_Collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/dimen_64dp"
            app:expandedTitleMarginStart="@dimen/dimen_40dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            >

            <ImageView
                android:id="@+id/logo_corto_f"
                android:layout_width="@dimen/dimen_160dp"
                android:layout_height="@dimen/dimen_160dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_weight="0.52"
                app:srcCompat="@mipmap/logoletrassinfondo"/>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/carretera"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/layout_home_front_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:paddingTop="@dimen/dimen_1dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false">


                <android.support.v7.widget.CardView
                    android:id="@+id/navegacion"
                    android:layout_width="@dimen/dimen_160dp"
                    android:layout_height="@dimen/dimen_180dp"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:clickable="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">


                        <ImageView
                            android:layout_width="@dimen/dimen_64dp"
                            android:layout_height="@dimen/dimen_64dp"
                            android:padding="@dimen/dimen_10dp"
                            android:background="@drawable/circuloazul"
                            android:src="@drawable/ic_navigation"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:text="@string/navegacion"/>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_1dp"
                            android:background="@color/colorGrisOscuro"
                            android:layout_margin="@dimen/dimen_10dp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/dimen_5dp"
                            android:textColor="@color/colorGrisMedio"
                            android:text="@string/navegacion_mensaje"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/settings_phone"
                    android:layout_width="@dimen/dimen_160dp"
                    android:layout_height="@dimen/dimen_180dp"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:clickable="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">


                        <ImageView
                            android:layout_width="@dimen/dimen_64dp"
                            android:layout_height="@dimen/dimen_64dp"
                            android:padding="@dimen/dimen_10dp"
                            android:background="@drawable/circuloazul"
                            android:src="@drawable/ic_phone_call"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:text="@string/settings_dispositivo"/>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_1dp"
                            android:background="@color/colorGrisOscuro"
                            android:layout_margin="@dimen/dimen_10dp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/dimen_5dp"
                            android:textColor="@color/colorGrisMedio"
                            android:text="@string/settings_dispositivo_mensaje"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false">

                <android.support.v7.widget.CardView
                    android:id="@+id/añadir_dispositivo"
                    android:layout_width="@dimen/dimen_340dp"
                    android:layout_height="@dimen/dimen_180dp"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:clickable="true">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">


                        <ImageView
                            android:layout_width="@dimen/dimen_64dp"
                            android:layout_height="@dimen/dimen_64dp"
                            android:padding="@dimen/dimen_10dp"
                            android:background="@drawable/circuloazul"
                            android:src="@drawable/ic_connect"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:text="@string/añadir_dispositivo"/>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_1dp"
                            android:background="@color/colorGrisOscuro"
                            android:layout_margin="@dimen/dimen_10dp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/dimen_5dp"
                            android:textColor="@color/colorGrisMedio"
                            android:text="@string/añadir_dispositivo_mensaje"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
